// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NeonHeader renders breadcrumb 1`] = `
<div class="neon-stack--gap-l neon-stack neon-header--page neon-header">
  <!-- @slot stack contents -->
  <div class="neon-swiper--horizontal neon-swiper--fade neon-swiper neon-breadcrumbs--responsive-swiper neon-breadcrumbs">
    <div class="neon-swiper__container">
      <!-- @slot contents of swiper with which to apply overflow scrolling. -->
      <div class="neon-breadcrumbs__container"><a class="neon-link--no-style neon-link--outline-none neon-link neon-breadcrumbs__back neon-breadcrumbs__back" tabindex="0">
          <!-- @slot the content of the link -->
          <!--v-if--><span class="neon-breadcrumbs__back-label">Zurück</span>
        </a>
        <div class="neon-breadcrumbs__links">
          <!--v-if--><a href="/level-1" class="neon-link--no-style neon-link--outline-none neon-link neon-link--router-link neon-breadcrumbs__link neon-breadcrumbs__link" tabindex="0">
            <!-- @slot the content of the link -->Level 1
          </a>
          <div class="neon-icon--name-chevron-right neon-icon neon-breadcrumbs__separator neon-breadcrumbs__separator"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
              <path class="neon-svg--fill" fill-rule="evenodd" d="M8.72 18.78a.75.75 0 001.06 0l6.25-6.25a.75.75 0 000-1.06L9.78 5.22a.75.75 0 00-1.06 1.06L14.44 12l-5.72 5.72a.75.75 0 000 1.06z"></path>
            </svg>
          </div><a href="/level-1/level-2" class="neon-link--no-style neon-link--outline-none neon-link neon-link--router-link neon-breadcrumbs__link neon-breadcrumbs__link" tabindex="0">
            <!-- @slot the content of the link -->Level 2
          </a>
          <div class="neon-icon--name-chevron-right neon-icon neon-breadcrumbs__separator neon-breadcrumbs__separator"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="100%" height="100%">
              <path class="neon-svg--fill" fill-rule="evenodd" d="M8.72 18.78a.75.75 0 001.06 0l6.25-6.25a.75.75 0 000-1.06L9.78 5.22a.75.75 0 00-1.06 1.06L14.44 12l-5.72 5.72a.75.75 0 000 1.06z"></path>
            </svg>
          </div><a href="/level-1/level-2/1234-5678-90" class="neon-link--no-style neon-link--outline-none neon-link neon-link--router-link neon-breadcrumbs__link neon-breadcrumbs__link" tabindex="0">
            <!-- @slot the content of the link -->1234-5678-90
          </a>
        </div>
      </div>
    </div>
    <div class="neon-swiper__fade-out"></div>
  </div>
  <div class="neon-inline--gap-l neon-inline neon-header__content">
    <!-- @slot inline contents -->
    <div class="neon-stack--gap-s neon-stack neon-header__content-copy">
      <!-- @slot stack contents -->
      <div class="neon-inline--gap-m neon-inline neon-header__title-wrapper">
        <!-- @slot inline contents -->
        <h1 class="neon-header__title">Page title</h1>
        <!--v-if-->
      </div><!-- @slot a slot for overriding the default subtitle styling and proving richer content -->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`NeonHeader renders page header 1`] = `
<div class="neon-stack--gap-l neon-stack neon-header--page neon-header">
  <!-- @slot stack contents -->
  <!--v-if-->
  <div class="neon-inline--gap-l neon-inline neon-header__content">
    <!-- @slot inline contents -->
    <div class="neon-stack--gap-s neon-stack neon-header__content-copy">
      <!-- @slot stack contents -->
      <div class="neon-inline--gap-m neon-inline neon-header__title-wrapper">
        <!-- @slot inline contents -->
        <h1 class="neon-header__title">Page title</h1>
        <!--v-if-->
      </div><!-- @slot a slot for overriding the default subtitle styling and proving richer content --><span class="neon-header__subtitle">Page subtitle</span>
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`NeonHeader renders page header by default 1`] = `
<div class="neon-stack--gap-l neon-stack neon-header--page neon-header">
  <!-- @slot stack contents -->
  <!--v-if-->
  <div class="neon-inline--gap-l neon-inline neon-header__content">
    <!-- @slot inline contents -->
    <div class="neon-stack--gap-s neon-stack neon-header__content-copy">
      <!-- @slot stack contents -->
      <div class="neon-inline--gap-m neon-inline neon-header__title-wrapper">
        <!-- @slot inline contents -->
        <h1 class="neon-header__title">Page title</h1>
        <!--v-if-->
      </div><!-- @slot a slot for overriding the default subtitle styling and proving richer content --><span class="neon-header__subtitle">Page subtitle</span>
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`NeonHeader renders section header 1`] = `
<div class="neon-stack--gap-l neon-stack neon-header--section neon-header">
  <!-- @slot stack contents -->
  <!--v-if-->
  <div class="neon-inline--gap-l neon-inline neon-header__content">
    <!-- @slot inline contents -->
    <div class="neon-stack--gap-s neon-stack neon-header__content-copy">
      <!-- @slot stack contents -->
      <div class="neon-inline--gap-m neon-inline neon-header__title-wrapper">
        <!-- @slot inline contents -->
        <h2 class="neon-header__title">Page title</h2>
        <!--v-if-->
      </div><!-- @slot a slot for overriding the default subtitle styling and proving richer content --><span class="neon-header__subtitle">Page subtitle</span>
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`NeonHeader renders sub section header 1`] = `
<div class="neon-stack--gap-l neon-stack neon-header--sub-section neon-header">
  <!-- @slot stack contents -->
  <!--v-if-->
  <div class="neon-inline--gap-l neon-inline neon-header__content">
    <!-- @slot inline contents -->
    <div class="neon-stack--gap-s neon-stack neon-header__content-copy">
      <!-- @slot stack contents -->
      <div class="neon-inline--gap-m neon-inline neon-header__title-wrapper">
        <!-- @slot inline contents -->
        <h3 class="neon-header__title">Page title</h3>
        <!--v-if-->
      </div><!-- @slot a slot for overriding the default subtitle styling and proving richer content --><span class="neon-header__subtitle">Page subtitle</span>
    </div>
    <!--v-if-->
  </div>
</div>
`;
